Fix dark mode

--- a/static/darkmode.css
+++ b/static/darkmode.css
@@ -1,7 +1,7 @@
 html {
     background-color: #181a1b !important;
 }
-html, body, input, textarea, select, button {
+html, body, input, textarea, select, button, a {
     background-color: #181a1b;
 }
 html, body, input, textarea, select, button {
@@ -14,6 +14,7 @@ a {
 table {
     border-color: #4c4c4c;
 }
+
 ::placeholder {
     color: #bab5ab;
 }
@@ -30,4 +31,8 @@ textarea:-webkit-autofill,
 select:-webkit-autofill {
     background-color: #545b00 !important;
     color: #e8e6e3 !important;
+}
+
+.post-id {
+    color: #e8e6e3;
 }
